@@ -1,6 +1,11 @@
 # ChangeLog for sci-biology/paml
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/paml/ChangeLog,v 1.6 2009/07/21 08:44:44 weaver Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/paml/ChangeLog,v 1.7 2009/11/13 15:36:55 weaver Exp $
+
+*paml-4.3a (13 Nov 2009)
+
+  13 Nov 2009; Andrey Kislyuk <weaver@gentoo.org> +paml-4.3a.ebuild:
+  Version bump
 
 *paml-4.2b-r1 (21 Jul 2009)
 
